--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "columnify": "^1.5.4",
     "cryptocompare": "^0.4.0",
+    "fs": "0.0.1-security",
     "google-stocks": "^2.0.1",
     "moment": "^2.20.1",
     "node-fetch": "^1.7.3",
