--- a/package.json
+++ b/package.json
@@ -12,10 +12,10 @@
     "columnify": "^1.5.4",
     "cryptocompare": "^0.4.0",
     "fs": "0.0.1-security",
-    "google-stocks": "^2.0.1",
     "moment": "^2.20.1",
     "node-fetch": "^1.7.3",
     "numeral": "^2.0.6",
+    "yahoo-finance": "^0.3.5",
     "yargs": "^11.0.0"
   }
 }
