--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "columnify": "^1.5.4",
     "fs": "0.0.1-security",
+    "lodash.orderby": "^4.6.0",
     "moment": "^2.20.1",
     "node-fetch": "^1.7.3",
     "numeral": "^2.0.6",
